// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskBar /> Snapshots <Clock /> should match snapshot 1`] = `
.c0 {
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: transparent;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c3 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  background: radial-gradient(#ff0 20%,transparent 20%) 0 0, radial-gradient(#ff0 20%,transparent 20%) 4px 4px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 0 1px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 3px 4px;
  background-size: 7px 7px;
  background-color: #ffffff;
  border: 1px solid;
  padding: 2px 2px 2px 4px;
  box-shadow: none;
  position: absolute;
  top: -20px;
  text-align: center;
  z-index: 2;
  display: none;
}

.c1 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c2 div:first-child {
  right: 0;
}

<div>
  <div
    class="c0"
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3"
      >
        24 August 1995
      </div>
      
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot 1`] = `
.c1 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  width: 100%;
}

<div>
  <div
    class="sc-pItiW c0"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with active prop 1`] = `
.c1 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
}

.c2 {
  background-color: #c3c7cb;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  outline: 1px dotted #000000;
  outline-offset: -4px;
  padding-top: 4px;
  padding-right: 2px;
  padding-bottom: 0;
  padding-left: 4px;
}

<div>
  <div
    class="sc-pItiW c0"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </div>
  <div
    class="sc-pItiW c2"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with icon prop 1`] = `
.c1 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  width: 100%;
}

<div>
  <div
    class="sc-pItiW c0"
  >
    <i
      class="c1"
      height="20"
      name="bat"
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots <WindowButton /> should match snapshot with small prop 1`] = `
.c1 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
}

<div>
  <div
    class="sc-pItiW c0"
  >
    <i
      class="c1"
      height="20"
      name=""
      style="margin-right: 4px; background-image: url(buffer-32-4-1);"
      width="20"
    />
    
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28;
  width: 100%;
  background-color: #c3c7cb;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.c3 {
  padding-left: 0;
  margin-left: 2px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #c3c7cb;
  box-shadow: none;
}

.c4 {
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: transparent;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c7 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  background: radial-gradient(#ff0 20%,transparent 20%) 0 0, radial-gradient(#ff0 20%,transparent 20%) 4px 4px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 0 1px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 3px 4px;
  background-size: 7px 7px;
  background-color: #ffffff;
  border: 1px solid;
  padding: 2px 2px 2px 4px;
  box-shadow: none;
  position: absolute;
  top: -20px;
  text-align: center;
  z-index: 2;
  display: none;
}

.c5 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c6 div:first-child {
  right: 0;
}

.c1 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <div
      class="c1"
    >
      <i
        class="c2"
        height="20"
        name="logo"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </div>
    <div
      class="c3"
      display="flex"
      width="100%"
    />
    <div
      class="c4"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          24 August 1995
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28;
  width: 100%;
  background-color: #c3c7cb;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.c3 {
  padding-left: 0;
  margin-left: 2px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #c3c7cb;
  box-shadow: none;
}

.c4 {
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: transparent;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c7 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  background: radial-gradient(#ff0 20%,transparent 20%) 0 0, radial-gradient(#ff0 20%,transparent 20%) 4px 4px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 0 1px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 3px 4px;
  background-size: 7px 7px;
  background-color: #ffffff;
  border: 1px solid;
  padding: 2px 2px 2px 4px;
  box-shadow: none;
  position: absolute;
  top: -20px;
  text-align: center;
  z-index: 2;
  display: none;
}

.c5 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c6 div:first-child {
  right: 0;
}

.c1 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
}

<div>
  <div
    class="c0"
    display="flex"
    height="28"
    width="100%"
  >
    <div
      class="c1"
    >
      <i
        class="c2"
        height="20"
        name="logo"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </div>
    <div
      class="c3"
      display="flex"
      width="100%"
    />
    <div
      class="c4"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          24 August 1995
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with list prop 2`] = `
<div>
  <div
    class="sc-pItiW hnNHoh"
    display="flex"
    height="28"
    width="100%"
  >
    .c3 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 32px;
  height: 32px;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 2px 6px;
}

.c2 i {
  margin-right: 10px;
}

.c2:hover {
  background-color: #000e7a;
  color: #ffffff;
}

.c2 ul {
  display: none;
  position: absolute;
  top: -2px;
  left: 97%;
  color: #000000;
}

.c2 ul i {
  width: 18px;
  height: 20px;
  margin-right: 6px;
}

.c2 svg {
  fill: #ffffff;
}

.c1 {
  background-color: #c3c7cb;
  padding: 5px 20px 6px;
  border: none;
  margin: 0;
  padding: 2px;
  list-style: none;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: 200px;
}

.c0 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  position: absolute;
  bottom: 28px;
}

<div
      class="c0"
    >
      <ul
        class="c1"
        width="200"
      >
        <li
          class="c2"
        >
          <i
            class="c3"
            height="32"
            name="reader_closed"
            style="background-image: url(buffer-32-4-1);"
            width="32"
          />
          Local Disk (C:)
        </li>
        <li
          class="c2"
        >
          <i
            class="c3"
            height="32"
            name="windows_explorer"
            style="background-image: url(buffer-32-4-1);"
            width="32"
          />
          Windows Explorer
        </li>
      </ul>
    </div>
    <div
      class="sc-pItiW sc-pcJja gFqxMG"
    >
      <i
        class="sc-qQYBZ hAbNvo"
        height="20"
        name="logo"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </div>
    <div
      class="sc-pItiW dBxQPa"
      display="flex"
      width="100%"
    />
    <div
      class="sc-pItiW anGto"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="sc-pZnSc kYvPuw sc-oUoif Iwwvw"
      >
        <div
          class="sc-pItiW sc-pQSRh bZAVFf"
        >
          24 August 1995
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with one Modal 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c9 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
  margin-right: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c5:last-child {
  margin-right: 0;
}

.c5:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c5:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c7 {
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28;
  width: 100%;
  background-color: #c3c7cb;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.c10 {
  padding-left: 0;
  margin-left: 2px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #c3c7cb;
  box-shadow: none;
}

.c13 {
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: transparent;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c16 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  background: radial-gradient(#ff0 20%,transparent 20%) 0 0, radial-gradient(#ff0 20%,transparent 20%) 4px 4px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 0 1px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 3px 4px;
  background-size: 7px 7px;
  background-color: #ffffff;
  border: 1px solid;
  padding: 2px 2px 2px 4px;
  box-shadow: none;
  position: absolute;
  top: -20px;
  text-align: center;
  z-index: 2;
  display: none;
}

.c14 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c15 div:first-child {
  right: 0;
}

.c8 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
}

.c11 {
  background-color: #e6e6e6;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  width: 100%;
}

.c12 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        height="13"
        name="bat"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <button
          class="sc-pscky c5"
        >
          ?
        </button>
        <button
          class="sc-pscky c5"
        >
          x
        </button>
      </ul>
    </div>
    <div
      class="c6"
    />
  </div>
  <div
    class="c7"
    display="flex"
    height="28"
    width="100%"
  >
    <div
      class="c8"
    >
      <i
        class="c9"
        height="20"
        name="logo"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </div>
    <div
      class="c10"
      display="flex"
      width="100%"
    >
      <div
        class="c11"
      >
        <i
          class="c9"
          height="20"
          name="bat"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="20"
        />
        <span
          class="c12"
        >
          file.bat
        </span>
      </div>
    </div>
    <div
      class="c13"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c14 c15"
      >
        <div
          class="c16"
        >
          24 August 1995
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> Snapshots should match snapshot with two Modals 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c11 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 20px;
  height: 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #868a8e;
}

.c8 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
  margin-right: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c5:last-child {
  margin-right: 0;
}

.c5:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c5:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c9 {
  padding: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28;
  width: 100%;
  background-color: #c3c7cb;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 2;
}

.c12 {
  padding-left: 0;
  margin-left: 2px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #c3c7cb;
  box-shadow: none;
}

.c16 {
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: transparent;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
}

.c19 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  background: radial-gradient(#ff0 20%,transparent 20%) 0 0, radial-gradient(#ff0 20%,transparent 20%) 4px 4px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 0 1px, radial-gradient(rgba(255,255,255,0.1) 20%,transparent 25%) 3px 4px;
  background-size: 7px 7px;
  background-color: #ffffff;
  border: 1px solid;
  padding: 2px 2px 2px 4px;
  box-shadow: none;
  position: absolute;
  top: -20px;
  text-align: center;
  z-index: 2;
  display: none;
}

.c17 {
  display: inline-block;
  position: relative;
  cursor: default;
  white-space: nowrap;
}

.c18 div:first-child {
  right: 0;
}

.c10 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
}

.c13 {
  background-color: #c3c7cb;
  box-shadow: inset 0.5px 0.5px 0px 0.5px #ffffff, inset 0 0 0 1px #868a8e, 1px 0px 0 0px #000000, 0px 1px 0 0px #000000, 1px 1px 0 0px #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  width: 100%;
}

.c15 {
  background-color: #e6e6e6;
  box-shadow: inset 0px 0px 0px 0px, inset 1px 1px 0px 0px #868a8e, 0.5px 0.5px 0px 0.5px #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px 3px;
  margin-right: 2px;
  max-width: 150px;
  width: 100%;
}

.c14 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        height="13"
        name="windows_explorer"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        Windows Explorer
      </div>
      <ul
        class="c4"
      >
        <button
          class="sc-pscky c5"
        >
          ?
        </button>
        <button
          class="sc-pscky c5"
        >
          x
        </button>
      </ul>
    </div>
    <div
      class="c6"
    />
  </div>
  <div
    class="c7 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c8 draggable"
    >
      <i
        class="c2"
        height="13"
        name="bat"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <button
          class="sc-pscky c5"
        >
          ?
        </button>
        <button
          class="sc-pscky c5"
        >
          x
        </button>
      </ul>
    </div>
    <div
      class="c6"
    />
  </div>
  <div
    class="c9"
    display="flex"
    height="28"
    width="100%"
  >
    <div
      class="c10"
    >
      <i
        class="c11"
        height="20"
        name="logo"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="20"
      />
      Start
    </div>
    <div
      class="c12"
      display="flex"
      width="100%"
    >
      <div
        class="c13"
      >
        <i
          class="c11"
          height="20"
          name="windows_explorer"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="20"
        />
        <span
          class="c14"
        >
          Windows Explorer
        </span>
      </div>
      <div
        class="c15"
      >
        <i
          class="c11"
          height="20"
          name="bat"
          style="margin-right: 4px; background-image: url(buffer-32-4-1);"
          width="20"
        />
        <span
          class="c14"
        >
          file.bat
        </span>
      </div>
    </div>
    <div
      class="c16"
      style="display: flex; justify-content: center; align-items: center;"
    >
      <div
        class="c17 c18"
      >
        <div
          class="c19"
        >
          24 August 1995
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
